# EternalPatcherGo

./: .deepsource.toml  .travis.yml  CMakeLists.txt  README.md  apply.c  curl.c  eternalpatcher.h  go.mod  main.c  main.go  patcher.c  utils.c
.github/workflows/: cmake.yml  release.yml  test-static.yml  test.yml
